Add friendship controller and create method

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
         <span class="profile-link">
           <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
         </span>
-        <%= send_button(user.id) %>
+        <%= send_button(user) %>
         <%= form_tag follow_user_path, method: :post do %>
           <%= hidden_field_tag :user_id, user.id %>
           <%= submit_tag "Request", class: 'btn btn-primary btn-sm' %>
