--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <%= menu_link_to 'Invitations', user_invitations_path %>
         </div>
         <div class="menu-item">
-          <%= menu_link_to 'Friends', friends_user_path %>
+          <%= menu_link_to 'Friends', friendships_path %>
         </div>
       </div>
       <% if current_user %>
