--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,7 @@
 <li class="post">
   <div>
     <div class='post-attribution' >
+      <p><%= post.comments_count %> Comments</p>
       <%= link_to post.user.name, user_path(post.user), class: 'post-author' %>
     </div>
     <div class='post-liking'>
