Add post footer styling

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -226,6 +226,14 @@ form {
     margin: 16px 0;
     display: flex;
     flex-direction: column;
+
+    .post-footer {
+      display: flex;
+
+      .counter-content {
+        margin: 5px;
+      }
+    }
   }
 
   .post-attribution {
