--- a/app/views/users/user_invitations.html.erb
+++ b/app/views/users/user_invitations.html.erb
@@ -6,9 +6,8 @@
         <span class="profile-link">
           <%= link_to 'See Profile', user_path(user), class: 'profile-link' %>
         </span>
-        <%= button_to "Accept", update_friendship_path({friendship: user, new_status: 'a'}), {class: 'btn btn-primary', method: :patch} %>
-        <%= button_to "Reject", reject_invitation_path(user), class: 'btn btn-primary' %>
-        <%= button_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= button_to 'Accept', update_friendship_path({friendship: user, new_status: 'a'}), {class: 'btn btn-primary', method: :patch} %>
+        <%= button_to 'Reject', user, method: :delete, data: { confirm: 'Are you sure?' } %>
       </li>
     <% end %>
   </ul>
