--- a/app/views/users/user_invitations.html.erb
+++ b/app/views/users/user_invitations.html.erb
@@ -1,14 +1,5 @@
 <section class="users-section">
   <ul class="users-list">
-    <% @invites.each do |user| %>
-      <li>
-        Name: <%= user.name %>
-        <span class="profile-link">
-          <%= link_to 'See Profile', user_path(user), class: 'profile-link' %>
-        </span>
-        <%= button_to 'Accept', update_friendship_path({friendship: user, new_status: 'a'}), {class: 'btn btn-primary', method: :patch} %>
-        <%= button_to 'Reject', user, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </li>
-    <% end %>
+    <%= user_invitations_helper %>
   </ul>
 </section>
