--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,12 +1,5 @@
 <section class="users-section">
   <ul class="users-list">
-    <% @friends.each do |user| %>
-      <li>
-        Name: <%= user.name %>
-        <span class="profile-link">
-          <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
-        </span>
-      </li>
-    <% end %>
+    <%= index_friendships_helper %>
   </ul>
 </section>
