--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <title>Stay in Touch</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta property='og:title' content='Stay In Touch'/>
+    <meta property='og:image' content='https://social-media.herokuapp.com/app/assets/images/app_screenshot.png'/>
+    <meta property='og:description' content='Stay In Touch is a social media web application. The application enables registration of users, Sign In of users, posting comments, liking posts, and sending friend requests.'/>
+    <meta property='og:url' content='https://social-media.herokuapp.com'/>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
